Update Pain Today section with two images in grid layout
- Replace single ports.png with thepaintoday1.jpeg and thepaintoday2.jpeg
- Display images side by side in 2-column grid between pain cards and workflow diagram
- Images are equal size for visual balance
- Maintain same caption and source attribution
- Mobile responsive with single column stack

--- a/market.html
+++ b/market.html
@@ -132,9 +132,15 @@
                         </div>
                     </div>
                     
-                    <div class="problem-image-container problem-image-float">
-                        <img src="assets/ports.png" alt="Fixed port cameras and conventional monitoring systems">
-                        <p class="problem-image-caption">Fixed port cameras and conventional monitoring systems are limited in coverage and mobility. <span class="image-source">Source: <a href="https://www.dssl.co.uk/ports-5/" target="_blank">DSSL Ports Monitoring</a></span></p>
+                    <div class="pain-images-grid">
+                        <div class="pain-image-item">
+                            <img src="assets/thepaintoday1.jpeg" alt="Fixed port cameras and conventional monitoring systems">
+                            <p class="problem-image-caption">Fixed port cameras and conventional monitoring systems are limited in coverage and mobility. <span class="image-source">Source: <a href="https://www.dssl.co.uk/ports-5/" target="_blank">DSSL Ports Monitoring</a></span></p>
+                        </div>
+                        <div class="pain-image-item">
+                            <img src="assets/thepaintoday2.jpeg" alt="Fixed port cameras and conventional monitoring systems">
+                            <p class="problem-image-caption">Fixed port cameras and conventional monitoring systems are limited in coverage and mobility. <span class="image-source">Source: <a href="https://www.dssl.co.uk/ports-5/" target="_blank">DSSL Ports Monitoring</a></span></p>
+                        </div>
                     </div>
                     
                     <div class="workflow-diagram-container">
