Update Industry Context section with new image and clean layout
- Replace market_info.png with industrycontext.jpeg
- Remove box container for cleaner, minimal presentation
- Add white background to image for natural blend
- Reduce chart size to 700px max-width to avoid page dominance
- Center image and maintain same source attribution

--- a/market.html
+++ b/market.html
@@ -330,12 +330,10 @@
                 <div class="section-content">
                     <p>The global maritime security market reflects strong structural demand across port infrastructure, coastal surveillance, and vessel protection. This benchmark data provides market context for WaveShift's positioning.</p>
                     
-                    <div class="chart-container">
-                        <div class="chart-header">
-                            <h3>Global Maritime Security Market Size, 2025 – 2032</h3>
-                        </div>
+                    <div class="industry-context-clean">
+                        <h3>Global Maritime Security Market Size, 2025 – 2032</h3>
                         
-                        <img src="assets/market_info.png" alt="Global Maritime Security Market Size 2025-2032" class="market-chart-image">
+                        <img src="assets/industrycontext.jpeg" alt="Global Maritime Security Market Size 2025-2032" class="market-chart-image industry-context-image">
 
                         <p class="chart-note"><strong>Context:</strong> This reflects the broader maritime security market across all segments. WaveShift targets a focused subset: non-weaponized, monitoring-first autonomous surface systems for port and near-shore operations.</p>
                         <p class="chart-source"><strong>Source:</strong> Persistence Market Research (2025–2026)</p>
