Add pitch deck with 11 slides and judging prompts, update navigation links

--- a/team.html
+++ b/team.html
@@ -68,6 +68,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2026 WaveShift. Autonomous Maritime Systems | Early-Stage Venture</p>
+            <!-- <a href="pitch/cover.html" style="margin-left: 1rem; color: #a8d5e8;">Pitch Deck</a> -->
         </div>
     </footer>
 
