--- a/pitch/competition.html
+++ b/pitch/competition.html
@@ -7,28 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="../styles.css">
     <style>
-        body {
-            overflow: hidden;
-        }
-        .pitch-page {
-            height: 100vh;
-            padding: 1.5rem 2rem 1rem;
-            display: flex;
-            flex-direction: column;
-            background: #f8f9fa;
-        }
-        .pitch-hero-title {
-            font-size: 2.2rem;
-            font-weight: 700;
-            color: var(--text-dark);
-            margin-bottom: 0.5rem;
-            text-align: center;
-        }
         .framing-statement {
             text-align: center;
-            font-size: 0.9rem;
+            font-size: clamp(0.7rem, 1.3vw, 0.85rem);
             color: #6c757d;
-            margin-bottom: 1rem;
+            margin-bottom: clamp(0.5rem, 1vh, 0.85rem);
             font-style: italic;
         }
         .slide-content {
@@ -36,8 +19,8 @@
             display: grid;
             grid-template-columns: 1.2fr 1fr;
             grid-template-rows: 1fr auto;
-            gap: 1rem;
-            max-height: calc(100vh - 140px);
+            gap: clamp(0.6rem, 1.2vw, 1rem);
+            min-height: 0;
         }
         .section-competitors {
             background: white;
@@ -243,10 +226,10 @@
         }
     </style>
 </head>
-<body>
+<body class="pitch-deck-body">
     <header class="navbar">
         <div class="container">
-            <div class="logo"><img src="../assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
+            <div class="logo"><img src="../assets/waveshift-logo.png" alt="WaveShift Logo"></div>
             <nav class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="../underlying-magic-technology.html">Technology</a>
@@ -259,9 +242,9 @@
         </div>
     </header>
 
-    <main>
-        <section class="pitch-page">
-            <h1 class="pitch-hero-title">Competition</h1>
+    <div class="pitch-slide">
+        <div class="pitch-slide-content" style="background: #f8f9fa; display: flex; flex-direction: column;">
+            <h1 class="pitch-hero-title" style="text-align: center; font-size: clamp(1.6rem, 3vw, 2.2rem); margin-bottom: clamp(0.3rem, 0.6vh, 0.5rem);">Competition</h1>
             <p class="framing-statement">
                 Autonomy platforms exist, but WaveShift is purpose-built for port monitoring.
             </p>
@@ -408,18 +391,12 @@
                 </div>
             </div>
 
-            <div class="pitch-nav-bottom">
-                <a href="marketing-sales.html" class="secondary">← Back</a>
-                <a href="team.html">Next: Team →</a>
+            <div class="pitch-nav-bottom" style="justify-content: center; margin-top: clamp(0.5rem, 1vh, 0.7rem);">
+                <a href="marketing-sales.html" class="secondary" style="background: #6c757d; color: white; text-decoration: none; border-radius: 4px; transition: background 0.3s;">← Back</a>
+                <a href="team.html" style="background: var(--accent-blue); color: white; text-decoration: none; border-radius: 4px; transition: background 0.3s;">Next: Team →</a>
             </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WaveShift. Autonomous Maritime Systems | Early-Stage Venture</p>
         </div>
-    </footer>
+    </div>
 
     <script src="../script.js"></script>
 </body>
