--- a/pitch/marketing-sales.html
+++ b/pitch/marketing-sales.html
@@ -7,21 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="stylesheet" href="../styles.css">
     <style>
-        body {
-            overflow: hidden;
-        }
-        .pitch-page {
-            height: 100vh;
-            padding: 1.5rem 2rem 1rem;
-            display: flex;
-            flex-direction: column;
-            background: #f8f9fa;
-        }
         .pitch-hero-title {
-            font-size: 2.2rem;
+            font-size: clamp(1.6rem, 3vw, 2.2rem);
             font-weight: 700;
             color: var(--text-dark);
-            margin-bottom: 1rem;
+            margin-bottom: clamp(0.5rem, 1vh, 0.85rem);
             text-align: center;
         }
         .slide-content {
@@ -29,8 +19,8 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-template-rows: auto 1fr auto;
-            gap: 1rem;
-            max-height: calc(100vh - 120px);
+            gap: clamp(0.6rem, 1.2vw, 1rem);
+            min-height: 0;
         }
         .section-who-buys {
             grid-column: 1 / -1;
@@ -230,10 +220,10 @@
         }
     </style>
 </head>
-<body>
+<body class="pitch-deck-body">
     <header class="navbar">
         <div class="container">
-            <div class="logo"><img src="../assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
+            <div class="logo"><img src="../assets/waveshift-logo.png" alt="WaveShift Logo"></div>
             <nav class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="../underlying-magic-technology.html">Technology</a>
@@ -246,12 +236,11 @@
         </div>
     </header>
 
-    <main>
-        <section class="pitch-page">
-            <div class="container" style="max-width: 1400px;">
-                <h1 class="pitch-hero-title">Marketing & Sales</h1>
-                
-                <div class="slide-content">
+    <div class="pitch-slide">
+        <div class="pitch-slide-content" style="background: #f8f9fa; display: flex; flex-direction: column;">
+            <h1 class="pitch-hero-title">Marketing & Sales</h1>
+            
+            <div class="slide-content">
                     <!-- WHO BUYS -->
                     <div class="section-who-buys">
                         <h3>Who Buys Maritime Monitoring</h3>
@@ -376,19 +365,13 @@
                     </div>
                 </div>
 
-                <div class="pitch-nav-bottom">
-                    <a href="technology.html" class="secondary">← Back</a>
-                    <a href="financials.html">Next: Financials →</a>
+                <div class="pitch-nav-bottom" style="justify-content: center; margin-top: clamp(0.5rem, 1vh, 0.7rem);">
+                    <a href="business-model.html" class="secondary" style="background: #6c757d; color: white; text-decoration: none; border-radius: 4px; transition: background 0.3s;">← Back</a>
+                    <a href="competition.html" style="background: var(--accent-blue); color: white; text-decoration: none; border-radius: 4px; transition: background 0.3s;">Next: Competition →</a>
                 </div>
             </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 WaveShift. Autonomous Maritime Systems | Early-Stage Venture</p>
         </div>
-    </footer>
+    </div>
 
     <script src="../script.js"></script>
 </body>
