--- a/pitch/cover.html
+++ b/pitch/cover.html
@@ -15,7 +15,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
-            padding-top: clamp(2rem, 8vh, 4rem);
+            padding-top: clamp(0.2rem, 1vh, 0.5rem);
             gap: 0;
             position: relative;
         }
@@ -67,15 +67,15 @@
             text-align: center;
             z-index: 10;
             position: absolute;
-            top: clamp(16rem, 37vh, 24rem);
+            top: clamp(16rem, 36vh, 24rem);
             left: 50%;
             transform: translateX(-40%);
         }
         .cover-hero-figure {
             margin: 0;
-            width: 100%;
+            width: 100vw;
             height: 50vh;
-            position: absolute;
+            position: fixed;
             bottom: 0;
             left: 0;
             right: 0;
