--- a/pitch/solution.html
+++ b/pitch/solution.html
@@ -10,18 +10,19 @@
         /* Headline - centered at top */
         .solution-headline {
             text-align: center;
-            font-size: clamp(1.2rem, 2.2vw, 1.6rem);
+            font-size: clamp(1.1rem, 2vw, 1.5rem);
             font-weight: 700;
             color: var(--primary-blue);
-            margin-bottom: clamp(0.8rem, 1.8vh, 1.2rem);
+            margin-bottom: clamp(0.6rem, 1.2vh, 0.9rem);
             line-height: 1.3;
+            letter-spacing: -0.3px;
         }
 
-        /* Two-column grid: left text (~40%), right visuals (~60%) */
+        /* Two-column grid: left text (~42%), right visuals (~58%) */
         .solution-layout {
             display: grid;
-            grid-template-columns: 1fr 1.3fr;
-            gap: clamp(1rem, 2vw, 1.5rem);
+            grid-template-columns: 1fr 1.25fr;
+            gap: clamp(0.9rem, 1.8vw, 1.3rem);
             flex: 1;
             min-height: 0;
             overflow: hidden;
@@ -31,36 +32,36 @@
         .solution-text-column {
             display: flex;
             flex-direction: column;
-            gap: clamp(0.8rem, 1.5vw, 1rem);
+            gap: clamp(0.7rem, 1.2vw, 0.85rem);
             overflow-y: auto;
             overflow-x: hidden;
-            padding-right: 0.25rem;
+            padding-right: 0.2rem;
         }
 
         /* Clean card styling */
         .solution-card {
             background: white;
-            padding: clamp(0.75rem, 1.3vw, 1rem);
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            border: 1px solid rgba(0, 0, 0, 0.05);
+            padding: clamp(0.7rem, 1.1vw, 0.9rem);
+            border-radius: 6px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.06);
+            border: 1px solid #f0f0f0;
             flex-shrink: 0;
         }
 
         .solution-card h3 {
-            font-size: clamp(0.9rem, 1.6vw, 1.1rem);
+            font-size: clamp(0.85rem, 1.5vw, 1rem);
             font-weight: 700;
             color: var(--primary-blue);
-            margin: 0 0 clamp(0.4rem, 0.8vh, 0.6rem) 0;
+            margin: 0 0 clamp(0.25rem, 0.5vh, 0.35rem) 0;
             line-height: 1.2;
         }
 
         .solution-card .solution-subtitle {
-            font-size: clamp(0.7rem, 1.2vw, 0.85rem);
+            font-size: clamp(0.68rem, 1.1vw, 0.8rem);
             color: var(--accent-blue);
             font-weight: 600;
-            margin: 0 0 clamp(0.3rem, 0.6vh, 0.5rem) 0;
-            line-height: 1.3;
+            margin: 0 0 clamp(0.3rem, 0.6vh, 0.45rem) 0;
+            line-height: 1.4;
         }
 
         .solution-card ul {
@@ -70,18 +71,18 @@
         }
 
         .solution-card li {
-            font-size: clamp(0.65rem, 1.1vw, 0.8rem);
-            line-height: 1.5;
+            font-size: clamp(0.62rem, 1vw, 0.75rem);
+            line-height: 1.4;
             color: var(--text-dark);
-            margin-bottom: clamp(0.2rem, 0.5vh, 0.35rem);
-            padding-left: 1rem;
+            margin-bottom: clamp(0.15rem, 0.4vh, 0.25rem);
+            padding-left: 0.9rem;
             position: relative;
         }
 
         .solution-card li:before {
             content: "•";
             position: absolute;
-            left: 0.2rem;
+            left: 0;
             color: var(--accent-blue);
             font-weight: bold;
         }
@@ -90,7 +91,7 @@
         .solution-visual-column {
             display: flex;
             flex-direction: column;
-            gap: clamp(0.8rem, 1.5vw, 1.2rem);
+            gap: clamp(0.7rem, 1.3vw, 1rem);
             min-height: 0;
         }
 
@@ -99,11 +100,11 @@
             display: flex;
             flex-direction: column;
             min-height: 0;
-            background: white;
-            padding: clamp(0.5rem, 1vw, 0.75rem);
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-            border: 1px solid rgba(0, 0, 0, 0.05);
+            background: #fafafa;
+            padding: clamp(0.5rem, 0.9vw, 0.7rem);
+            border-radius: 6px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.06);
+            border: 1px solid #f0f0f0;
         }
 
         .solution-image-block img {
@@ -111,13 +112,13 @@
             width: 100%;
             height: 100%;
             object-fit: contain;
-            border-radius: 4px;
+            border-radius: 3px;
         }
 
         .solution-image-caption {
-            font-size: clamp(0.6rem, 0.95vw, 0.75rem);
-            color: #666;
-            margin-top: clamp(0.3rem, 0.6vh, 0.5rem);
+            font-size: clamp(0.58rem, 0.9vw, 0.7rem);
+            color: #777;
+            margin-top: clamp(0.25rem, 0.5vh, 0.35rem);
             font-weight: 500;
             line-height: 1.3;
             flex-shrink: 0;
