--- a/pitch/solution.html
+++ b/pitch/solution.html
@@ -131,7 +131,7 @@
         .solution-image-container {
             display: flex;
             flex-direction: column;
-            background: #0a1820;
+            background: transparent;
             border: 1px solid rgba(255, 255, 255, 0.08);
             border-radius: 6px;
             padding: clamp(0.6rem, 1.1vw, 0.85rem);
@@ -146,7 +146,6 @@
             object-fit: contain;
             border-radius: 4px;
             min-height: 0;
-            background: #0a1820;
         }
 
         .solution-image-caption {
