--- a/pitch/competition.html
+++ b/pitch/competition.html
@@ -10,7 +10,7 @@
         .framing-statement {
             text-align: center;
             font-size: clamp(0.7rem, 1.3vw, 0.85rem);
-            color: #6c757d;
+            color: #a0c4d4;
             margin-bottom: clamp(0.5rem, 1vh, 0.85rem);
             font-style: italic;
         }
@@ -23,24 +23,25 @@
             min-height: 0;
         }
         .section-competitors {
-            background: white;
+            background: rgba(15, 61, 92, 0.6);
             padding: 1.25rem;
             border-radius: 6px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
             overflow-y: auto;
+            border: 1px solid rgba(160, 196, 212, 0.2);
         }
         .section-competitors h3 {
             font-size: 1.1rem;
-            color: var(--primary-blue);
+            color: #66d9ff;
             margin-bottom: 0.75rem;
             font-weight: 700;
-            border-bottom: 2px solid var(--accent-blue);
+            border-bottom: 2px solid #1a8cbe;
             padding-bottom: 0.25rem;
         }
         .competitor-category {
             margin-bottom: 1rem;
             padding-bottom: 1rem;
-            border-bottom: 1px solid #e9ecef;
+            border-bottom: 1px solid rgba(160, 196, 212, 0.2);
         }
         .competitor-category:last-child {
             border-bottom: none;
@@ -49,12 +50,12 @@
         .category-title {
             font-size: 0.85rem;
             font-weight: 700;
-            color: var(--text-dark);
+            color: #e0f4f7;
             margin-bottom: 0.25rem;
         }
         .category-examples {
             font-size: 0.7rem;
-            color: #6c757d;
+            color: #a0c4d4;
             margin-bottom: 0.5rem;
             font-style: italic;
         }
@@ -69,12 +70,12 @@
             border-radius: 4px;
         }
         .strengths-list {
-            background: #e8f8e8;
-            border-left: 3px solid #28a745;
+            background: rgba(40, 167, 69, 0.15);
+            border-left: 3px solid #2dd4bf;
         }
         .limitations-list {
-            background: #fff3cd;
-            border-left: 3px solid #ffc107;
+            background: rgba(255, 193, 7, 0.1);
+            border-left: 3px solid #fbbf24;
         }
         .strengths-list h4, .limitations-list h4 {
             font-size: 0.7rem;
@@ -84,10 +85,16 @@
             letter-spacing: 0.5px;
         }
         .strengths-list h4 {
-            color: #28a745;
+            color: #2dd4bf;
+        }
+        .strengths-list {
+            color: #c8e6e5;
         }
         .limitations-list h4 {
-            color: #856404;
+            color: #fbbf24;
+        }
+        .limitations-list {
+            color: #f5e9d3;
         }
         .strengths-list ul, .limitations-list ul {
             list-style: none;
@@ -104,7 +111,7 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: #28a745;
+            color: #2dd4bf;
         }
         .limitations-list li:before {
             content: "⚠";
@@ -113,18 +120,19 @@
             font-size: 0.65rem;
         }
         .section-matrix {
-            background: white;
+            background: rgba(15, 61, 92, 0.6);
             padding: 1.25rem;
             border-radius: 6px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
             overflow-y: auto;
+            border: 1px solid rgba(160, 196, 212, 0.2);
         }
         .section-matrix h3 {
             font-size: 1.1rem;
-            color: var(--primary-blue);
+            color: #66d9ff;
             margin-bottom: 0.75rem;
             font-weight: 700;
-            border-bottom: 2px solid var(--accent-blue);
+            border-bottom: 2px solid #1a8cbe;
             padding-bottom: 0.25rem;
         }
         .matrix-table {
@@ -133,27 +141,29 @@
             border-collapse: collapse;
         }
         .matrix-table th {
-            background: #e8f4f8;
+            background: rgba(26, 140, 190, 0.3);
             padding: 0.5rem 0.25rem;
             text-align: center;
             font-weight: 700;
-            color: var(--primary-blue);
-            border: 1px solid #b3dce8;
+            color: #66d9ff;
+            border: 1px solid rgba(26, 140, 190, 0.4);
             font-size: 0.65rem;
             line-height: 1.2;
         }
         .matrix-table td {
             padding: 0.5rem 0.25rem;
             text-align: center;
-            border: 1px solid #dee2e6;
+            border: 1px solid rgba(160, 196, 212, 0.15);
             vertical-align: middle;
+            color: #c8e6e5;
         }
         .matrix-table tr:first-child td {
             font-weight: 600;
-            background: #f8f9fa;
+            background: rgba(13, 40, 71, 0.4);
             text-align: left;
             padding-left: 0.5rem;
             font-size: 0.7rem;
+            color: #e0f4f7;
         }
         .matrix-table .checkmark {
             color: #28a745;
@@ -172,14 +182,15 @@
         }
         .section-why-waveshift {
             grid-column: 1 / -1;
-            background: linear-gradient(135deg, #0066cc 0%, #004c99 100%);
+            background: linear-gradient(135deg, #1a4d6d 0%, #0d2847 100%);
             padding: 1rem 1.5rem;
             border-radius: 6px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+            box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+            border: 1px solid rgba(102, 217, 255, 0.2);
         }
         .section-why-waveshift h3 {
             font-size: 1rem;
-            color: white;
+            color: #66d9ff;
             margin-bottom: 0.5rem;
             font-weight: 700;
         }
@@ -189,12 +200,12 @@
             gap: 0.75rem;
         }
         .why-item {
-            background: rgba(255, 255, 255, 0.15);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            background: rgba(26, 140, 190, 0.2);
+            border: 1px solid rgba(102, 217, 255, 0.3);
             padding: 0.5rem;
             border-radius: 4px;
             text-align: center;
-            color: white;
+            color: #e0f4f7;
             font-size: 0.75rem;
             font-weight: 600;
             line-height: 1.3;
@@ -218,9 +229,9 @@
     </header>
 
     <div class="pitch-slide">
-        <div class="pitch-slide-content" style="background: #f8f9fa; display: flex; flex-direction: column;">
-            <h1 class="pitch-hero-title" style="text-align: center; font-size: clamp(1.6rem, 3vw, 2.2rem); margin-bottom: clamp(0.3rem, 0.6vh, 0.5rem);">Competition</h1>
-            <p class="framing-statement">
+        <div class="pitch-slide-content" style="background: linear-gradient(135deg, #0d2847 0%, #1a4d6d 50%, #0f3d5c 100%); display: flex; flex-direction: column;">
+            <h1 class="pitch-hero-title" style="text-align: center; font-size: clamp(1.6rem, 3vw, 2.2rem); margin-bottom: clamp(0.3rem, 0.6vh, 0.5rem); color: #e0f4f7;">Competition</h1>
+            <p class="framing-statement" style="color: #a0c4d4;">
                 Autonomy platforms exist, but WaveShift is purpose-built for port monitoring.
             </p>
 
