Add Pitch Deck tab and create pitch-deck.html for seamless slide navigation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="logo"><img src="assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
             <nav class="nav-links">
                 <a href="index.html" class="active">Home</a>
+                <a href="pitch-deck.html">Pitch Deck</a>
                 <a href="technology.html">Technology</a>
                 <a href="economics.html">Economics</a>
                 <a href="development.html">Development</a>
