Update team page with member profiles and partner logos

--- a/team.html
+++ b/team.html
@@ -34,26 +34,54 @@
         <!-- TEAM MEMBERS SECTION -->
         <section class="team-section">
             <div class="container">
-                <div class="team-grid">
+                <div class="team-members-wrapper">
                     <!-- TEAM MEMBER 1 -->
-                    <div class="team-card">
-                        <div class="team-role">Founder</div>
-                        <h2 class="team-name">Liba Snyder</h2>
-                        <p class="team-title">Undergraduate Student — Aerospace Engineering & Mechanical Engineering</p>
-                        <div class="team-focus">
-                            <h4>Focus:</h4>
-                            <p>Autonomy, guidance and navigation, systems integration</p>
+                    <div class="team-member-card">
+                        <div class="team-member-photo">
+                            <img src="assets/Liba.png" alt="Liba Snyder">
+                        </div>
+                        <div class="team-member-info">
+                            <h2 class="team-member-name">Liba Snyder</h2>
+                            <div class="team-member-role">Founder</div>
+                            <p class="team-member-title">UB Student | Mechanical & Aerospace Engineering (Junior)</p>
+                            <p class="team-member-desc">Credibility: Leads customer discovery, pilots, and product direction</p>
+                            <a href="https://www.linkedin.com/in/libasnyder/" target="_blank" class="team-member-link">LinkedIn Profile</a>
+                        </div>
+                        <div class="team-member-logo">
+                            <img src="assets/waveshift-logo.png" alt="WaveShift">
                         </div>
                     </div>
 
                     <!-- TEAM MEMBER 2 -->
-                    <div class="team-card">
-                        <div class="team-role">Co-Founder</div>
-                        <h2 class="team-name">Guru Teja</h2>
-                        <p class="team-title">M.S. Mechanical Engineering</p>
-                        <div class="team-focus">
-                            <h4>Focus:</h4>
-                            <p>Structural design, hydrodynamics, simulations</p>
+                    <div class="team-member-card">
+                        <div class="team-member-photo">
+                            <img src="assets/David.png" alt="David Macoretta">
+                        </div>
+                        <div class="team-member-info">
+                            <h2 class="team-member-name">David Macoretta</h2>
+                            <div class="team-member-role">Cofounder</div>
+                            <p class="team-member-title">UB Student | Mechanical Engineering (Junior)</p>
+                            <p class="team-member-desc">Credibility: 9 years U.S. Navy nuclear power plant mechanic; leads CONOPS + pilot ops</p>
+                            <a href="https://www.linkedin.com/in/david-macoretta-25b8057b/" target="_blank" class="team-member-link">LinkedIn Profile</a>
+                        </div>
+                        <div class="team-member-logo">
+                            <img src="assets/waveshift-logo.png" alt="WaveShift">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- PARTNER LOGOS SECTION -->
+                <div class="partner-logos-section">
+                    <h3>Partner Organizations</h3>
+                    <div class="partner-logos">
+                        <div class="partner-logo">
+                            <img src="assets/partner-eaglehawk.svg" alt="Eagle Hawk">
+                        </div>
+                        <div class="partner-logo">
+                            <img src="assets/partner-portofbuffalo.svg" alt="Port of Buffalo">
+                        </div>
+                        <div class="partner-logo">
+                            <img src="assets/partner-ub.svg" alt="University at Buffalo">
                         </div>
                     </div>
                 </div>
