Update home page logo to colored version and remove pitch deck nav link

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <div class="logo"><img src="assets/waveshift-logo.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
+            <div class="logo"><img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift Logo" style="height: 150px; vertical-align: middle;"></div>
             <nav class="nav-links">
                 <a href="index.html" class="active">Home</a>
-                <a href="pitch-deck.html">Pitch Deck</a>
                 <a href="technology.html">Technology</a>
                 <a href="economics.html">Economics</a>
                 <a href="development.html">Development</a>
@@ -28,7 +27,7 @@
         <!-- HERO SECTION -->
         <section class="hero">
             <div class="hero-content">
-                <img src="assets/waveshift-logo.png" alt="WaveShift Logo" class="hero-logo">
+                <img src="assets/colored-logo_1-removebg-preview.png" alt="WaveShift Logo" class="hero-logo">
                 <h1 class="hero-headline">Autonomous Maritime Monitoring for Ports and Trade Routes</h1>
                 <p class="hero-subheadline">WaveShift is developing autonomous surface vessels designed to reduce the cost, manpower, and operational risk of maritime security and port monitoring.</p>
                 <div class="hero-buttons">
